[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitztigerclaw-framework"
version = "0.3.0"
description = "100x efficiency data automation framework"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
]

[project.optional-dependencies]
fast = ["orjson>=3.9"]
scrape = ["beautifulsoup4>=4.12", "lxml>=4.9"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]
tiger = ["anthropic>=0.40"]
all = ["orjson>=3.9", "beautifulsoup4>=4.12", "lxml>=4.9", "anthropic>=0.40"]

[project.scripts]
blitztigerclaw = "blitztigerclaw.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
